syntax = "proto3";

option java_package = "grpc";
option java_multiple_files = true;

service CoordinatorService {
  rpc updateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc sendHeartBeat(HeartBeatRequest) returns (HeartBeatResponse);
}

service WorkerService {
  rpc sendTask(TaskRequest) returns (TaskResponse);
}

enum TaskStatus {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 3;
}

message TaskRequest {
  uint64 taskId = 1;
  string data = 2;
}

message TaskResponse {
  uint64 taskId = 1;
  TaskStatus status = 2;
}

message UpdateTaskRequest {
  uint64 taskId = 1;
  string taskStatus = 2;
}

message UpdateTaskResponse {
  uint64 taskId = 1;
  string message = 2;
  bool success = 3;
}

message HeartBeatRequest {
  uint64 workerId = 1;
  string hostname = 2;
  string port = 3;
}
message HeartBeatResponse {
  bool acknowledge = 1;
}
